feat(event): add keyset pagination and auditing and align tests accordingly